--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 24
     buildToolsVersion "25.0.0"
@@ -19,12 +19,25 @@ android {
     }
 }
 
+
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //noinspection GradleCompatible
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     testCompile 'junit:junit:4.12'
+    compile 'org.jetbrains.anko:anko:0.10.0'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.google.apis:google-api-services-oauth2:v1-rev132-1.22.0'
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
+    compile 'com.github.scribejava:scribejava-apis:4.1.1'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
+}
+repositories {
+    mavenCentral()
 }
