--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //noinspection GradleCompatible
+    
+
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
-    testCompile 'junit:junit:4.12'
     compile 'org.jetbrains.anko:anko:0.10.0'
     compile 'com.android.support:design:24.2.1'
     compile 'com.google.apis:google-api-services-oauth2:v1-rev132-1.22.0'
@@ -37,6 +38,8 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile 'com.github.salomonbrys.kotson:kotson:2.5.0'
+    testCompile 'junit:junit:4.12'
 }
 repositories {
     mavenCentral()
