--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:launchMode="standard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,6 +29,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".ShowDetailActivity"></activity>
+
+        <service
+            android:name=".Services.MediaService"
+            android:enabled="true"/>
+
+
     </application>
 
 </manifest>
