--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
-    compile 'org.jetbrains.anko:anko:0.10.0'
+    compile "org.jetbrains.anko:anko:$anko_version"
     compile 'com.android.support:design:24.2.1'
     compile 'com.google.apis:google-api-services-oauth2:v1-rev132-1.22.0'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
@@ -42,7 +42,39 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'com.sothree.slidinguppanel:library:3.3.1'
+    compile 'org.jetbrains.anko:anko-cardview-v7:0.8.1'
     testCompile 'junit:junit:4.12'
+
+    // Appcompat-v7 (only Anko Commons)
+    compile "org.jetbrains.anko:anko-appcompat-v7-commons:$anko_version"
+
+    // Appcompat-v7 (Anko Layouts)
+    compile "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
+    compile "org.jetbrains.anko:anko-coroutines:$anko_version"
+
+    // CardView-v7
+    compile "org.jetbrains.anko:anko-cardview-v7:$anko_version"
+
+    // Design
+    compile "org.jetbrains.anko:anko-design:$anko_version"
+    compile "org.jetbrains.anko:anko-design-coroutines:$anko_version"
+
+    // GridLayout-v7
+    compile "org.jetbrains.anko:anko-gridlayout-v7:$anko_version"
+
+    // Percent
+    compile "org.jetbrains.anko:anko-percent:$anko_version"
+
+    // RecyclerView-v7
+    compile "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
+    compile "org.jetbrains.anko:anko-recyclerview-v7-coroutines:$anko_version"
+
+    // Support-v4 (only Anko Commons)
+    compile "org.jetbrains.anko:anko-support-v4-commons:$anko_version"
+
+    // Support-v4 (Anko Layouts)
+    compile "org.jetbrains.anko:anko-support-v4:$anko_version"
+
 }
 repositories {
     mavenCentral()
