--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,24 +26,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //noinspection GradleCompatible
-    
 
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+
     compile "org.jetbrains.anko:anko:$anko_version"
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.google.apis:google-api-services-oauth2:v1-rev132-1.22.0'
-    compile 'com.google.code.findbugs:jsr305:2.0.1'
-    compile 'com.github.scribejava:scribejava-apis:4.1.1'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.squareup.okhttp:okhttp:2.5.0'
-    compile 'com.github.salomonbrys.kotson:kotson:2.5.0'
-    compile 'com.android.support:cardview-v7:21.0.+'
-    compile 'com.android.support:recyclerview-v7:21.0.+'
-    compile 'com.sothree.slidinguppanel:library:3.3.1'
-    compile 'org.jetbrains.anko:anko-cardview-v7:0.8.1'
-    testCompile 'junit:junit:4.12'
 
     // Appcompat-v7 (only Anko Commons)
     compile "org.jetbrains.anko:anko-appcompat-v7-commons:$anko_version"
@@ -75,7 +60,27 @@ dependencies {
     // Support-v4 (Anko Layouts)
     compile "org.jetbrains.anko:anko-support-v4:$anko_version"
 
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.google.apis:google-api-services-oauth2:v1-rev132-1.22.0'
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
+    compile 'com.github.scribejava:scribejava-apis:4.1.1'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile 'com.github.salomonbrys.kotson:kotson:2.5.0'
+    compile 'com.android.support:cardview-v7:21.0.3'
+    compile 'com.android.support:recyclerview-v7:21.0.3'
+    compile 'com.sothree.slidinguppanel:library:3.3.1'
+    compile 'org.jetbrains.anko:anko-cardview-v7:0.8.1'
+    // https://mvnrepository.com/artifact/org.json/json
+   // compile group: 'org.json', name: 'json', version: '20170516'
+    compile 'com.github.smart-fun:XmlToJson:1.2.2'
+    //compile files('src/libs/java-json.jar')
+    testCompile 'junit:junit:4.12'
 }
 repositories {
     mavenCentral()
+    maven { url "https://jitpack.io" }
 }
