--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,30 +11,40 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" android:launchMode="standard">
+
+        <meta-data
+            android:name="android.app.default_searchable"
+            android:value=".SearchActivity"/>
+
+        <activity
+            android:name=".MainActivity"
+            android:launchMode="standard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
 
                 <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:host="www.example.com"
-                    android:path="/my_redirect"
-                    android:scheme="http" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".ShowDetailActivity"></activity>
+        <activity android:name=".ShowDetailActivity" />
 
         <service
             android:name=".Services.MediaService"
-            android:enabled="true"/>
+            android:enabled="true" />
 
-
+        <activity
+            android:name=".SearchActivity"
+            android:theme="@style/AppTheme_2"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
     </application>
 
 </manifest>
