--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,10 @@ dependencies {
     // Support-v4 (Anko Layouts)
     compile "org.jetbrains.anko:anko-support-v4:$anko_version"
 
+    // https://mvnrepository.com/artifact/org.json/json
+    // compile group: 'org.json', name: 'json', version: '20170516'
+    //compile files('src/libs/java-json.jar')
+
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     compile 'com.android.support:design:24.2.1'
@@ -74,10 +78,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'com.sothree.slidinguppanel:library:3.3.1'
     compile 'org.jetbrains.anko:anko-cardview-v7:0.8.1'
-    // https://mvnrepository.com/artifact/org.json/json
-   // compile group: 'org.json', name: 'json', version: '20170516'
-    compile 'com.github.smart-fun:XmlToJson:1.2.2'
-    //compile files('src/libs/java-json.jar')
+    compile "org.jetbrains.anko:anko-sqlite:$anko_version"
     testCompile 'junit:junit:4.12'
 }
 repositories {
