--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="android.app.default_searchable"
-            android:value=".SearchActivity"/>
+            android:value=".SearchActivity" />
 
         <activity
             android:name=".MainActivity"
@@ -26,7 +25,6 @@
 
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
-
         </activity>
         <activity android:name=".ShowDetailActivity" />
 
@@ -36,15 +34,16 @@
 
         <activity
             android:name=".SearchActivity"
-            android:theme="@style/AppTheme_2"
-            >
+            android:theme="@style/AppTheme_2">
             <intent-filter>
-                <action android:name="android.intent.action.SEARCH"/>
+                <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+
     </application>
 
 </manifest>
