--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,9 @@ dependencies {
     compile 'com.sothree.slidinguppanel:library:3.3.1'
     compile 'org.jetbrains.anko:anko-cardview-v7:0.8.1'
     compile "org.jetbrains.anko:anko-sqlite:$anko_version"
+    compile 'com.github.arimorty:floatingsearchview:2.1.1'
+    compile 'ninja.sakib:PultusORM:v1.4'
+
     testCompile 'junit:junit:4.12'
 }
 repositories {
