--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,9 +60,7 @@ dependencies {
     // Support-v4 (Anko Layouts)
     compile "org.jetbrains.anko:anko-support-v4:$anko_version"
 
-    // https://mvnrepository.com/artifact/org.json/json
-    // compile group: 'org.json', name: 'json', version: '20170516'
-    //compile files('src/libs/java-json.jar')
+
 
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
@@ -71,7 +69,6 @@ dependencies {
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile 'com.github.scribejava:scribejava-apis:4.1.1'
     compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'com.github.salomonbrys.kotson:kotson:2.5.0'
     compile 'com.android.support:cardview-v7:21.0.3'
@@ -81,6 +78,10 @@ dependencies {
     compile "org.jetbrains.anko:anko-sqlite:$anko_version"
     compile 'com.github.arimorty:floatingsearchview:2.1.1'
     compile 'ninja.sakib:PultusORM:v1.4'
+
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
+    compile 'com.android.support:support-v4:25.3.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
 
     testCompile 'junit:junit:4.12'
 }
